--- a/SecondKadaiApp/Base.lproj/Main.storyboard
+++ b/SecondKadaiApp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,103 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前を入力してください" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OYA-X3-Lmd">
+                                <rect key="frame" x="92" y="144" width="191" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cbr-V4-eb9">
+                                <rect key="frame" x="0.0" y="265" width="375" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cIl-d9-mig">
+                                <rect key="frame" x="164.66666666666666" y="399" width="46" height="30"/>
+                                <state key="normal" title="次　へ">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <segue destination="8bW-BD-Pi1" kind="show" id="Qz3-ez-cRc"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.74756518890000001" green="0.94735991379999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="cbr-V4-eb9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="17R-hY-OIh"/>
+                            <constraint firstItem="OYA-X3-Lmd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="2ZJ-NJ-Ntx"/>
+                            <constraint firstItem="OYA-X3-Lmd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KdX-e1-WI6"/>
+                            <constraint firstItem="OYA-X3-Lmd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RnU-Yv-Nwh"/>
+                            <constraint firstItem="cbr-V4-eb9" firstAttribute="top" secondItem="OYA-X3-Lmd" secondAttribute="bottom" constant="100" id="dko-0v-AuY"/>
+                            <constraint firstItem="cbr-V4-eb9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e47-TQ-5Mi"/>
+                            <constraint firstItem="cIl-d9-mig" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="i8n-qg-heT"/>
+                            <constraint firstItem="cIl-d9-mig" firstAttribute="top" secondItem="cbr-V4-eb9" secondAttribute="bottom" constant="100" id="rPe-FL-nkz"/>
+                            <constraint firstItem="cIl-d9-mig" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="spW-Sg-EGA"/>
+                            <constraint firstItem="cbr-V4-eb9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tLn-OA-ECo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cbr-V4-eb9" secondAttribute="trailing" id="uF5-Gq-RcJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="inputText" destination="cbr-V4-eb9" id="SD7-Jq-GCF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="132" y="121"/>
+        </scene>
+        <!--Result View Controller-->
+        <scene sceneID="r0W-xB-Bz8">
+            <objects>
+                <viewController id="8bW-BD-Pi1" customClass="ResultViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sEr-g0-brj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h2L-Bv-Qli">
+                                <rect key="frame" x="166.66666666666666" y="221" width="41.666666666666657" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="lcu-bu-QJb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pIM-3g-WXe">
+                                <rect key="frame" x="164.66666666666666" y="355" width="46" height="30"/>
+                                <state key="normal" title="戻　る">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <segue destination="4wd-DL-UiJ" kind="unwind" unwindAction="unwind:" id="q19-Fw-hXM"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.99107927080000002" green="0.97891730070000005" blue="0.76658624409999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="pIM-3g-WXe" firstAttribute="centerX" secondItem="sEr-g0-brj" secondAttribute="centerX" id="3h3-o9-Afk"/>
+                            <constraint firstItem="pIM-3g-WXe" firstAttribute="centerX" secondItem="sEr-g0-brj" secondAttribute="centerX" id="BKL-7b-7dq"/>
+                            <constraint firstItem="h2L-Bv-Qli" firstAttribute="centerX" secondItem="sEr-g0-brj" secondAttribute="centerX" id="LWv-zI-wxK"/>
+                            <constraint firstItem="h2L-Bv-Qli" firstAttribute="centerX" secondItem="sEr-g0-brj" secondAttribute="centerX" id="iCo-sZ-ll2"/>
+                            <constraint firstItem="pIM-3g-WXe" firstAttribute="top" secondItem="h2L-Bv-Qli" secondAttribute="bottom" constant="100" id="wfa-lw-QFI"/>
+                            <constraint firstItem="h2L-Bv-Qli" firstAttribute="top" secondItem="dLI-PF-UrS" secondAttribute="top" constant="221" id="whL-Qn-3lN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dLI-PF-UrS"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="hOZ-4U-kh0"/>
+                    <connections>
+                        <outlet property="label" destination="h2L-Bv-Qli" id="HMa-0d-UCd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cZg-9L-4dG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="4wd-DL-UiJ" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="846" y="120"/>
         </scene>
     </scenes>
 </document>
